--- a/src/app/cars/car-list/car-list.component.html
+++ b/src/app/cars/car-list/car-list.component.html
@@ -1,14 +1,41 @@
-<mat-card class="car-card" *ngFor="let car of cars">
-  <mat-card-header>
-    <mat-card-title>{{ car.make }} {{ car.model }}</mat-card-title>
-    <mat-card-subtitle>{{ car.price }} ₴</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="{{ car.image }}" alt="">
-  <mat-card-content>
-    <p>{{ car.engine }}</p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>BUY</button>
-  </mat-card-actions>
-</mat-card>
+<div class="controls">
+  <mat-form-field>
+    <mat-label>Number of cars</mat-label>
+    <mat-select [(value)]="numCars">
+      <mat-option value="5">5</mat-option>
+      <mat-option value="10">10</mat-option>
+      <mat-option value="15">15</mat-option>
+      <mat-option value="20">20</mat-option>
+      <mat-option value="30">30</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button class="button" mat-flat-button color="basic" (click)="openDialog()">Add car</button>
+
+  <mat-form-field>
+    <mat-label>Sort by price</mat-label>
+    <mat-select [(value)]="sortDirection" (selectionChange)="sortCars()">
+      <mat-option value="asc">Ascending</mat-option>
+      <mat-option value="desc">Descending</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
+<div class="car_container">
+  <mat-card class="example-card" *ngFor="let car of sortedCars | slice:0:numCars">
+    <mat-card-title>{{ car.make }} {{ car.model }} {{car.year}}</mat-card-title>
+    <img class="image" mat-card-image src="{{ car.image }}" />
+    <mat-card-content>
+      <p>{{ car.price }} $</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button class="button" mat-flat-button color="primary" (click)="addToCart(car)">Buy</button>
+      <button class="button" mat-flat-button color="primary">More</button>
+      <button class="button" mat-flat-button color="primary" mat-button [matMenuTriggerFor]="menu">Edit</button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="deleteItem(car.id)">Delete</button>
+        <button mat-menu-item (click)="openDialog(car)">Edit</button>
+      </mat-menu>
+    </mat-card-actions>
+  </mat-card>
+</div>
